CHANGELOG

2015-12-01 3.9.3
    * fix(parse): set default timeout to 7.5s (indexing purposes)

2015-11-02 3.9.2
    * feat: react native build beta

2015-11-02 3.9.1
    * fix: throw on really bad usage instead of silently failing
    * fix: make angular build cache work

2015-10-23 3.9.0
    * feat: add similarSearch beta method
    * feat: add new way to generate secured api key using query parameters

2015-09-21 3.8.1

    * fix: disable chunked encoding on empty body DELETE requests in Node.js

2015-09-01 3.8.0

    * test: node v4 is now the default testing env
    * fix: always send a unique response to the user
    * fix: use `lodash` by default, only use `lodash-compat` when building for the browser
    * feat: add client.addAlgoliaAgent() to augment the sent x-algolia-agent
    * chore: move all deps to ^version and add a shrinkwrap to allow reproducible builds

2015-09-01 3.7.8

    * fix: ignore $http.defaults.headers.common in angular build
    * fix: force distinct false in deleteByQuery search
    * docs: precise initialization option values

2015-08-27 3.7.7
    * fix: listen to socket errors in nodejs keepalive strategy

2015-08-24 3.7.6
    * fix: encodeURIComponent(cursor) in browseFrom()

2015-07-23 3.7.5
    * fix: withCredentials forced to false in Angular

2015-07-20 3.7.4
    * fix: JSON.stringify fix when Array.prototype.toJSON is defined (prototype.js < 1.7 bug)

2015-07-09 3.7.3
    * fix: make https over http proxy work

2015-07-08 3.7.2
    * fix: remove a git clone dependency on install (debug/ms/yui compressor issue)

2015-07-08 3.7.1
    * fix: do not call agent.destroy when there's no such method
    * fix: do not rely on any "smart" port computing

2015-06-18 3.7.0
    * feat: allow passing `httpAgent` option to the nodejs client
      allow more flexible proxy/keepAlive agents in some more complex environments

2015-06-18 3.6.3
    * fix: allow getting the debug log from the outside